# agv_pro_ros2-autocharge

agv_pro_ros2-humble/agv_pro_ros2-humble/: .gitignore  README.md
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_autocharge/: README.md  package.xml  setup.cfg  setup.py
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_autocharge/agv_pro_autocharge/: __init__.py  abcd_loop_navigation.py  charge_test.py  combined_auto_recharger.py  serial_can_parser.py
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_autocharge/config/: charger_position.json  nav_goal_params.yaml
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_autocharge/resource/: agv_pro_autocharge
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_base/: CMakeLists.txt  package.xml
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_base/include/agv_pro_base/: agv_pro_driver.h
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_base/src/: agv_pro_node.cpp  agv_pro_ros.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_bringup/: CMakeLists.txt  package.xml
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_bringup/launch/: agv_pro_bringup.launch.py
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_description/: CMakeLists.txt  package.xml
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_description/launch/: agv_pro_display.launch.py
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_description/meshes/: laser_link.stl  wheel_lb_link.stl  wheel_lf_link.stl
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_description/urdf/: agv_pro.urdf
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_gazebo/: CMakeLists.txt  README.md  package.xml
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_gazebo/config/: agv_control copy.yaml  agv_control.yaml
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_gazebo/launch/: agv_pro.launch.py  agv_pro_display.launch.py  agv_pro_gazebo.launch.py  agv_pro_gazebo.launchcopy.py  teleop_launch.py  test.launch.py
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_gazebo/meshes/: wheel_rb_link.stl  wheel_rf_link.stl
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_gazebo/rviz/: agvpro_display.rviz
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_gazebo/urdf/: agv_pro copy.xacro  agv_pro.xacro  agv_pro1.xacro  minimal_robot.xacro  ros2_controller.xacro
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_gazebo/urdf/parts/: gazebo_control_plugin.xacro  wheel_macro.xacro
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_gazebo/worlds/: empty.world
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_msgs/: CMakeLists.txt  package.xml
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_msgs/msg/: AGVProStatus.msg
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_msgs/scripts/: ros_client.py
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_msgs/srv/: GetDigitalInput.srv  SetDigitalOutput.srv
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_navigation2/: CMakeLists.txt  package.xml
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_navigation2/launch/: navigation2_active.launch.py
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_navigation2/map/: map.pgm  map.yaml
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_navigation2/param/: agvpro.yaml
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_navigation2/rviz/: agvpro_navigation2.rviz
agv_pro_ros2-humble/agv_pro_ros2-humble/agv_pro_navigation2/scripts/: example_nav_through_poses.py  example_nav_to_pose.py  example_waypoint_follower.py
agv_pro_ros2-humble/agv_pro_ros2-humble/cartographer_ros/cartographer_ros/: CMakeLists.txt  package.xml
agv_pro_ros2-humble/agv_pro_ros2-humble/cartographer_ros/cartographer_ros/configuration_files/: agvpro_backpack_2d.lua
agv_pro_ros2-humble/agv_pro_ros2-humble/cartographer_ros/cartographer_ros/launch/: agvpro_backpack_2d.launch.py
agv_pro_ros2-humble/agv_pro_ros2-humble/cartographer_ros/cartographer_ros/src/: assets_writer.cpp  assets_writer_main.cpp  node_main.cpp  offline_node.cpp  ros_log_sink.cpp  rosbag_validate_main.cpp  urdf_reader.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/cartographer_ros/cartographer_rviz/: CMakeLists.txt  package.xml
agv_pro_ros2-humble/agv_pro_ros2-humble/navigation2/nav2_rviz_plugins/: CMakeLists.txt  plugins_description.xml
agv_pro_ros2-humble/agv_pro_ros2-humble/navigation2/nav2_rviz_plugins/src/: charger_tool.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/corelib/src/: Camera.cpp  DBDriver.cpp  DBDriverSqlite3.cpp  Features2d.cpp  Memory.cpp  Odometry.cpp  Parameters.cpp  Rtabmap.cpp  SensorCapture.cpp  SensorCaptureThread.cpp  Signature.cpp  Transform.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/examples/LidarMapping/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/examples/RGBDMapping/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/examples/WifiMapping/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/guilib/src/: AboutDialog.cpp  CalibrationDialog.cpp  CameraViewer.cpp  CloudViewer.cpp  DataRecorder.cpp  DatabaseViewer.cpp  EditConstraintDialog.cpp  ExportBundlerDialog.cpp  ExportCloudsDialog.cpp  LinkRefiningDialog.cpp  OdometryViewer.cpp  PreferencesDialog.cpp  StatsToolBox.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/tools/Calibration/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/tools/CameraRGBD/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/tools/ConsoleApp/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/tools/DataRecorder/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/tools/DatabaseViewer/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/tools/DetectMoreLoopClosures/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/tools/EpipolarGeometry/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/tools/EurocDataset/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/rtabmap/tools/Export/: main.cpp
agv_pro_ros2-humble/agv_pro_ros2-humble/slam_gmapping/slam_gmapping/: CMakeLists.txt
agv_pro_ros2-humble/agv_pro_ros2-humble/teleop_twist_keyboard/: README.md  teleop_twist_keyboard.py
(+103 files in other folders)
