<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_pro_bringup</name>
  <version>1.0.8</version>
  <description>ROS 2 launch scripts for starting the AGV Pro</description>
  <maintainer email="weijun.xie@elephantrobotics.com">lanni</maintainer>
  <license>BSD-3-Clause license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>agv_pro_description</exec_depend>
  <exec_depend>agv_pro_base</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
